--- a/index.html
+++ b/index.html
@@ -1,46 +1,144 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ANSES. En cada etapa de tu vida</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>ANSES · En cada etapa de tu vida</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://www.anses.gob.ar/sites/default/files/favicon-anses_2.png"
+      type="image/png"
+    />
   </head>
   <body>
-
     <header>
-        <div id="header" class="container-fluid bg-primary d-flex justify-content-between align-items-center">
-            
+      <div id="header" class="container-fluid bg-primary align-items-center">
+        <!-- Para el header, uso un div tipo ROW, el cual divido en columnas para posicionar cada elemento
+        Ademas, hago uso del offset para generar espacios sin ocupar en la grid, para de esta manera espaciar cada elemento correctamente -->
 
+        <!-- Me falta saber como mover todo un poco mas a la izquierda, para que la similitud con la web original sea mayor -->
+        <div id="header_row" class="row w-100 d-flex align-items-center">
+          <div class="col-md-3 offset-md-1">
+            <img
+              id="logo_anses_png"
+              class=""
+              src="./assets/logo-anses-con-slogan.png"
+              alt="logo"
+            />
+          </div>
 
+          <div class="col-md-3 offset-md-3">
+            <form
+              id="header_search_form"
+              class="d-flex align-items-center"
+              role="search"
+            >
+              <input
+                id="busca_en_anses"
+                class="form-control bg-light rounded-pill"
+                type="search"
+                placeholder="Busca en ANSES"
+                aria-label="Search"
+              />
 
-            
-            <img id="logo_anses_png" class="" src="./assets/logo-anses-con-slogan.png" alt="logo">
+              <button type="button" class="btn btn-primary ms-2 h-25">
+                Buscar
+              </button>
+            </form>
+          </div>
 
-            <form class="d-flex " role="search">
-                <input class="form-control me-2 bg-light" type="search" placeholder="Busca en ANSES" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-
-              <img class="justify-self-end" src="./assets/btn-mi-anses.svg" alt="">
+          <div class="col-md-2 ml-md-auto">
+            <img
+              id="img_mianses"
+              class="bg-light"
+              src="./assets/mianses.png"
+              alt=""
+            />
+          </div>
         </div>
+      </div>
+
+      <!-- Creo un container-fluid que tiene un 100% de width, y dentro ubico un row para el navbar -->
+      <div class="container-fluid">
+        <!-- Uso un div de tipo ROW para utilizar toda una fila con la lista de la navbar -->
+        <div class="row">
+          <ul
+            id="navbar_ul"
+            class="nav d-flex justify-content-center w-100 fs-3"
+          >
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Embarazo y nacimiento</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Hijas e Hijos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Educacion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Trabajo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Matrimonio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Jubilaciones y pensiones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Viudez y fallecimiento</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
-   
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <!-- <div class="container-fluid bg-danger h-25 w-100  text-center">
+      <h5>Texto para ver un width del 100%</h5>
+    </div> -->
+    <main>
+      <section class="container card-container">
+        <div class="card">
+          <img src="./assets/Anses_Verano_1.jpg" class="card-img-top" alt="Operativo Verano 2023">
+          <div class="card-body">
+            <h5 class="card-title">
+              Lanzamos el Operativo Verano 2023
+            </h5>
+            <p class="card-text">En los meses de enero y febrero, realizaremos 650 operativos de atención a lo largo y ancho de la Argentina</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/seguimos_igualando.png" class="card-img-top" alt="Operativo Verano 2023">
+          <div class="card-body">
+            <h5 class="card-title">
+              Seguimos igualando oportunidades
+            </h5>
+            <p class="card-text">Para que todas y todos los niñas, niños y adolescentes de nuestro país estén protegidos, anunciamos el acceso a la Seguridad Social para chicas y chicos que se encuentran en hogares de cuidado</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/banner_progresar.png" class="card-img-top" alt="Operativo Verano 2023">
+          <div class="card-body">
+            <h5 class="card-title">
+              Nuevo aumento de las becas Progresar
+            </h5>
+            <p class="card-text">El monto mensual de las becas pasará de $7.400 a $9.000, alcanzando un incremento del 22%</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
