--- a/index.html
+++ b/index.html
@@ -105,6 +105,38 @@
     </div> -->
    
 
+    <main>
+      <section class="container card-container">
+        <div class="card">
+          <img src="./assets/Anses_Verano_1.jpg" class="card-img-top" alt="Operativo Verano 2023">
+          <div class="card-body">
+            <h5 class="card-title">
+              Lanzamos el Operativo Verano 2023
+            </h5>
+            <p class="card-text">En los meses de enero y febrero, realizaremos 650 operativos de atención a lo largo y ancho de la Argentina</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/seguimos_igualando.png" class="card-img-top" alt="Operativo Verano 2023">
+          <div class="card-body">
+            <h5 class="card-title">
+              Seguimos igualando oportunidades
+            </h5>
+            <p class="card-text">Para que todas y todos los niñas, niños y adolescentes de nuestro país estén protegidos, anunciamos el acceso a la Seguridad Social para chicas y chicos que se encuentran en hogares de cuidado</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/banner_progresar.png" class="card-img-top" alt="Operativo Verano 2023">
+          <div class="card-body">
+            <h5 class="card-title">
+              Nuevo aumento de las becas Progresar
+            </h5>
+            <p class="card-text">El monto mensual de las becas pasará de $7.400 a $9.000, alcanzando un incremento del 22%</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
 
 
 
