un poco de ajuste en iconos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             </form>
           </div>
   
-          <div class="col-md-2 ml-md-auto "><img id="img_mianses" class="bg-light " src="./assets/mianses.png" alt="">
+          <div class="col-md-2 ml-md-auto ">
+            <a href="https://servicioscorp.anses.gob.ar/clavelogon/logon.aspx?system=miansesv2"><img id="img_mianses" class="bg-light " src="./assets/mianses.png" alt=""></a>
+            
           </div>
   
         </div>
@@ -69,25 +71,25 @@
           <!-- Uso un div de tipo ROW para utilizar toda una fila con la lista de la navbar -->
         <div class="row"> <ul id="navbar_ul" class="nav  d-flex justify-content-center w-100  fs-3 ">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Embarazo y nacimiento</a>
+            <a class="nav-link active" aria-current="page" href="https://www.anses.gob.ar/embarazo-y-nacimiento">Embarazo y nacimiento</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Hijas e Hijos</a>
+            <a class="nav-link" href="https://www.anses.gob.ar/hijos">Hijas e Hijos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Educacion</a>
+            <a class="nav-link" href="https://www.anses.gob.ar/educacion">Educacion</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Trabajo</a>
+              <a class="nav-link" href="https://www.anses.gob.ar/trabajo">Trabajo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Matrimonio</a>
+              <a class="nav-link" href="https://www.anses.gob.ar/matrimonio">Matrimonio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Jubilaciones y pensiones</a>
+              <a class="nav-link" href="https://www.anses.gob.ar/jubilados-y-pensionados">Jubilaciones y pensiones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Viudez y fallecimiento</a>
+              <a class="nav-link" href="https://www.anses.gob.ar/viudez-y-fallecimiento">Viudez y fallecimiento</a>
             </li>
         
         </ul></div>
